#######################
## SOURCE FILE LISTS ##
#######################
personal_files = []
poke_icon_files = []
pokegra_files = []
otherpoke_index = {} # otherpoke uses a unique, non-uniform structure

# pl_poke_icon has some shared files that are listed at the beginning
# of the NARC.
poke_icon_shared = files(
    '.shared/pl_poke_icon.pal',
    '.shared/pl_poke_icon_anim_01.json',
    '.shared/pl_poke_icon_cell_01.json',
    '.shared/pl_poke_icon_anim_02.json',
    '.shared/pl_poke_icon_cell_02.json',
    '.shared/pl_poke_icon_anim_03.json',
    '.shared/pl_poke_icon_cell_03.json',
)

otherpoke_shared = files(
    '.shared/substitute_back.png',
    '.shared/substitute_front.png',
    '.shared/shadows.png',
)

sinnoh_pokedex = files('sinnoh_pokedex.json')

# Process mons in national dex order
pokemon_subdirs = [
    '000',  # Glitch pokemon "-----" aka DPBox, Invisible Shiny Bulbasau
    'bulbasaur',
    'ivysaur',
    'venusaur',
    'charmander',
    'charmeleon',
    'charizard',
    'squirtle',
    'wartortle',
    'blastoise',
    'caterpie',
    'metapod',
    'butterfree',
    'weedle',
    'kakuna',
    'beedrill',
    'pidgey',
    'pidgeotto',
    'pidgeot',
    'rattata',
    'raticate',
    'spearow',
    'fearow',
    'ekans',
    'arbok',
    'pikachu',
    'raichu',
    'sandshrew',
    'sandslash',
    'nidoran_f',
    'nidorina',
    'nidoqueen',
    'nidoran_m',
    'nidorino',
    'nidoking',
    'clefairy',
    'clefable',
    'vulpix',
    'ninetales',
    'jigglypuff',
    'wigglytuff',
    'zubat',
    'golbat',
    'oddish',
    'gloom',
    'vileplume',
    'paras',
    'parasect',
    'venonat',
    'venomoth',
    'diglett',
    'dugtrio',
    'meowth',
    'persian',
    'psyduck',
    'golduck',
    'mankey',
    'primeape',
    'growlithe',
    'arcanine',
    'poliwag',
    'poliwhirl',
    'poliwrath',
    'abra',
    'kadabra',
    'alakazam',
    'machop',
    'machoke',
    'machamp',
    'bellsprout',
    'weepinbell',
    'victreebel',
    'tentacool',
    'tentacruel',
    'geodude',
    'graveler',
    'golem',
    'ponyta',
    'rapidash',
    'slowpoke',
    'slowbro',
    'magnemite',
    'magneton',
    'farfetchd',
    'doduo',
    'dodrio',
    'seel',
    'dewgong',
    'grimer',
    'muk',
    'shellder',
    'cloyster',
    'gastly',
    'haunter',
    'gengar',
    'onix',
    'drowzee',
    'hypno',
    'krabby',
    'kingler',
    'voltorb',
    'electrode',
    'exeggcute',
    'exeggutor',
    'cubone',
    'marowak',
    'hitmonlee',
    'hitmonchan',
    'lickitung',
    'koffing',
    'weezing',
    'rhyhorn',
    'rhydon',
    'chansey',
    'tangela',
    'kangaskhan',
    'horsea',
    'seadra',
    'goldeen',
    'seaking',
    'staryu',
    'starmie',
    'mr_mime',
    'scyther',
    'jynx',
    'electabuzz',
    'magmar',
    'pinsir',
    'tauros',
    'magikarp',
    'gyarados',
    'lapras',
    'ditto',
    'eevee',
    'vaporeon',
    'jolteon',
    'flareon',
    'porygon',
    'omanyte',
    'omastar',
    'kabuto',
    'kabutops',
    'aerodactyl',
    'snorlax',
    'articuno',
    'zapdos',
    'moltres',
    'dratini',
    'dragonair',
    'dragonite',
    'mewtwo',
    'mew',
    'chikorita',
    'bayleef',
    'meganium',
    'cyndaquil',
    'quilava',
    'typhlosion',
    'totodile',
    'croconaw',
    'feraligatr',
    'sentret',
    'furret',
    'hoothoot',
    'noctowl',
    'ledyba',
    'ledian',
    'spinarak',
    'ariados',
    'crobat',
    'chinchou',
    'lanturn',
    'pichu',
    'cleffa',
    'igglybuff',
    'togepi',
    'togetic',
    'natu',
    'xatu',
    'mareep',
    'flaaffy',
    'ampharos',
    'bellossom',
    'marill',
    'azumarill',
    'sudowoodo',
    'politoed',
    'hoppip',
    'skiploom',
    'jumpluff',
    'aipom',
    'sunkern',
    'sunflora',
    'yanma',
    'wooper',
    'quagsire',
    'espeon',
    'umbreon',
    'murkrow',
    'slowking',
    'misdreavus',
    'unown',
    'wobbuffet',
    'girafarig',
    'pineco',
    'forretress',
    'dunsparce',
    'gligar',
    'steelix',
    'snubbull',
    'granbull',
    'qwilfish',
    'scizor',
    'shuckle',
    'heracross',
    'sneasel',
    'teddiursa',
    'ursaring',
    'slugma',
    'magcargo',
    'swinub',
    'piloswine',
    'corsola',
    'remoraid',
    'octillery',
    'delibird',
    'mantine',
    'skarmory',
    'houndour',
    'houndoom',
    'kingdra',
    'phanpy',
    'donphan',
    'porygon2',
    'stantler',
    'smeargle',
    'tyrogue',
    'hitmontop',
    'smoochum',
    'elekid',
    'magby',
    'miltank',
    'blissey',
    'raikou',
    'entei',
    'suicune',
    'larvitar',
    'pupitar',
    'tyranitar',
    'lugia',
    'ho_oh',
    'celebi',
    'treecko',
    'grovyle',
    'sceptile',
    'torchic',
    'combusken',
    'blaziken',
    'mudkip',
    'marshtomp',
    'swampert',
    'poochyena',
    'mightyena',
    'zigzagoon',
    'linoone',
    'wurmple',
    'silcoon',
    'beautifly',
    'cascoon',
    'dustox',
    'lotad',
    'lombre',
    'ludicolo',
    'seedot',
    'nuzleaf',
    'shiftry',
    'taillow',
    'swellow',
    'wingull',
    'pelipper',
    'ralts',
    'kirlia',
    'gardevoir',
    'surskit',
    'masquerain',
    'shroomish',
    'breloom',
    'slakoth',
    'vigoroth',
    'slaking',
    'nincada',
    'ninjask',
    'shedinja',
    'whismur',
    'loudred',
    'exploud',
    'makuhita',
    'hariyama',
    'azurill',
    'nosepass',
    'skitty',
    'delcatty',
    'sableye',
    'mawile',
    'aron',
    'lairon',
    'aggron',
    'meditite',
    'medicham',
    'electrike',
    'manectric',
    'plusle',
    'minun',
    'volbeat',
    'illumise',
    'roselia',
    'gulpin',
    'swalot',
    'carvanha',
    'sharpedo',
    'wailmer',
    'wailord',
    'numel',
    'camerupt',
    'torkoal',
    'spoink',
    'grumpig',
    'spinda',
    'trapinch',
    'vibrava',
    'flygon',
    'cacnea',
    'cacturne',
    'swablu',
    'altaria',
    'zangoose',
    'seviper',
    'lunatone',
    'solrock',
    'barboach',
    'whiscash',
    'corphish',
    'crawdaunt',
    'baltoy',
    'claydol',
    'lileep',
    'cradily',
    'anorith',
    'armaldo',
    'feebas',
    'milotic',
    'castform',
    'kecleon',
    'shuppet',
    'banette',
    'duskull',
    'dusclops',
    'tropius',
    'chimecho',
    'absol',
    'wynaut',
    'snorunt',
    'glalie',
    'spheal',
    'sealeo',
    'walrein',
    'clamperl',
    'huntail',
    'gorebyss',
    'relicanth',
    'luvdisc',
    'bagon',
    'shelgon',
    'salamence',
    'beldum',
    'metang',
    'metagross',
    'regirock',
    'regice',
    'registeel',
    'latias',
    'latios',
    'kyogre',
    'groudon',
    'rayquaza',
    'jirachi',
    'deoxys',
    'turtwig',
    'grotle',
    'torterra',
    'chimchar',
    'monferno',
    'infernape',
    'piplup',
    'prinplup',
    'empoleon',
    'starly',
    'staravia',
    'staraptor',
    'bidoof',
    'bibarel',
    'kricketot',
    'kricketune',
    'shinx',
    'luxio',
    'luxray',
    'budew',
    'roserade',
    'cranidos',
    'rampardos',
    'shieldon',
    'bastiodon',
    'burmy',
    'wormadam',
    'mothim',
    'combee',
    'vespiquen',
    'pachirisu',
    'buizel',
    'floatzel',
    'cherubi',
    'cherrim',
    'shellos',
    'gastrodon',
    'ambipom',
    'drifloon',
    'drifblim',
    'buneary',
    'lopunny',
    'mismagius',
    'honchkrow',
    'glameow',
    'purugly',
    'chingling',
    'stunky',
    'skuntank',
    'bronzor',
    'bronzong',
    'bonsly',
    'mime_jr',
    'happiny',
    'chatot',
    'spiritomb',
    'gible',
    'gabite',
    'garchomp',
    'munchlax',
    'riolu',
    'lucario',
    'hippopotas',
    'hippowdon',
    'skorupi',
    'drapion',
    'croagunk',
    'toxicroak',
    'carnivine',
    'finneon',
    'lumineon',
    'mantyke',
    'snover',
    'abomasnow',
    'weavile',
    'magnezone',
    'lickilicky',
    'rhyperior',
    'tangrowth',
    'electivire',
    'magmortar',
    'togekiss',
    'yanmega',
    'leafeon',
    'glaceon',
    'gliscor',
    'mamoswine',
    'porygon_z',
    'gallade',
    'probopass',
    'dusknoir',
    'froslass',
    'rotom',
    'uxie',
    'mesprit',
    'azelf',
    'dialga',
    'palkia',
    'heatran',
    'regigigas',
    'giratina',
    'cresselia',
    'phione',
    'manaphy',
    'darkrai',
    'shaymin',
    'arceus',
    'egg',
    'bad_egg'
]

foreach pokemon : pokemon_subdirs
    subdir(pokemon)
endforeach


# Order of extra personal files for mon forms
personal_files += [
    deoxys_attack_personal,
    deoxys_defense_personal,
    deoxys_speed_personal,
    wormadam_sandy_personal,
    wormadam_trash_personal,
    giratina_origin_personal,
    shaymin_sky_personal,
    rotom_heat_personal,
    rotom_wash_personal,
    rotom_frost_personal,
    rotom_fan_personal,
    rotom_mow_personal
]

# The last icon added to the list before this should have been
# the basic egg icon.
poke_icon_files += [
    manaphy_egg_icon,
    deoxys_attack_icon,
    deoxys_defense_icon,
    deoxys_speed_icon,
    unown_a_icon,
    unown_b_icon,
    unown_c_icon,
    unown_d_icon,
    unown_e_icon,
    unown_f_icon,
    unown_g_icon,
    unown_h_icon,
    unown_i_icon,
    unown_j_icon,
    unown_k_icon,
    unown_l_icon,
    unown_m_icon,
    unown_n_icon,
    unown_o_icon,
    unown_p_icon,
    unown_q_icon,
    unown_r_icon,
    unown_s_icon,
    unown_t_icon,
    unown_u_icon,
    unown_v_icon,
    unown_w_icon,
    unown_x_icon,
    unown_y_icon,
    unown_z_icon,
    unown_exc_icon,
    unown_que_icon,
    burmy_sandy_icon,
    burmy_trash_icon,
    wormadam_sandy_icon,
    wormadam_trash_icon,
    shellos_east_sea_icon,
    gastrodon_east_sea_icon,
    giratina_origin_icon,
    shaymin_sky_icon,
    rotom_heat_icon,
    rotom_wash_icon,
    rotom_frost_icon,
    rotom_fan_icon,
    rotom_mow_icon,
]

otherpoke_files = []
num_keys = otherpoke_index.keys().length()
foreach key : range(num_keys)
    otherpoke_files += otherpoke_index.get(key.to_string())
endforeach


# Generate NARCs
wotbl_narc = custom_target('wotbl.narc',
    output: 'wotbl.narc',
    input: personal_files,
    env: json2bin_env,
    depends: [ generated_consts_py ],
    command: [
        pokemon_wotbl_data_py,
        '--knarc', knarc_exe,
        '--source-dir', '@CURRENT_SOURCE_DIR@',
        '--private-dir', '@PRIVATE_DIR@',
        '--output-dir', '@OUTDIR@',
    ]
)

pl_personal_narc = custom_target('pl_personal.narc',
    output: 'pl_personal.narc',
    input: personal_files,
    env: json2bin_env,
    depends: [ generated_consts_py ],
    command: [
        pokemon_personal_data_py,
        '--knarc', knarc_exe,
        '--source-dir', '@CURRENT_SOURCE_DIR@',
        '--private-dir', '@PRIVATE_DIR@',
        '--output-dir', '@OUTDIR@',
    ]
)

evo_narc = custom_target('evo.narc',
    output: 'evo.narc',
    input: personal_files,
    env: json2bin_env,
    depends: [ generated_consts_py ],
    command: [
        evo_py,
        '--knarc', knarc_exe,
        '--source-dir', '@CURRENT_SOURCE_DIR@',
        '--private-dir', '@PRIVATE_DIR@',
        '--output-dir', '@OUTDIR@',
    ]
)

pl_poke_icon_narc = custom_target('pl_poke_icon.narc',
    output: 'pl_poke_icon.narc',
    input: [
        poke_icon_shared,
        poke_icon_files
    ],
    command: [
        make_pl_poke_icon_py,
        '--nitrogfx', nitrogfx_exe,
        '--knarc', knarc_exe,
        '--shared-dir', '@CURRENT_SOURCE_DIR@/.shared',
        '--private-dir', '@PRIVATE_DIR@',
        '--output-dir', '@OUTDIR@',
        poke_icon_files
    ]
)

pl_pokegra_narc = custom_target('pl_pokegra.narc',
    output: 'pl_pokegra.narc',
    input: pokegra_files,
    command: [
        make_pl_pokegra_py,
        '--nitrogfx', nitrogfx_exe,
        '--knarc', knarc_exe,
        '--source-dir', '@CURRENT_SOURCE_DIR@',
        '--private-dir', '@PRIVATE_DIR@',
        '--output-dir', '@OUTDIR@',
        pokemon_subdirs
    ]
)

pl_otherpoke_narc = custom_target('pl_otherpoke.narc',
    output: 'pl_otherpoke.narc',
    input: [
        otherpoke_files,
        otherpoke_shared
    ],
    command: [
        make_pl_otherpoke_py,
        '--nitrogfx', nitrogfx_exe,
        '--knarc', knarc_exe,
        '--private-dir', '@PRIVATE_DIR@',
        '--output-dir', '@OUTDIR@',
        '--sprite-entries', '154',
        '--palette-entries', '94',
        otherpoke_files,
        otherpoke_shared
    ]
)

height_narc = custom_target('height.narc',
    output: 'height.narc',
    input: personal_files,
    env: json2bin_env,
    depends: [ generated_consts_py ],
    command: [
        make_height_py,
        '--knarc', knarc_exe,
        '--source-dir', '@CURRENT_SOURCE_DIR@',
        '--private-dir', '@PRIVATE_DIR@',
        '--output-dir', '@OUTDIR@',
        pokemon_subdirs
    ]
)

pl_poke_data_narc = custom_target('pl_poke_data.narc',
    output: 'pl_poke_data.narc',
    input: personal_files,
    env: json2bin_env,
    depends: [ generated_consts_py ],
    command: [
        pl_poke_data_py,
        '--knarc', knarc_exe,
        '--source-dir', '@CURRENT_SOURCE_DIR@',
        '--private-dir', '@PRIVATE_DIR@',
        '--output-dir', '@OUTDIR@',
    ]
)

pl_pokezukan_narc = custom_target('pl_pokezukan.narc',
    output: 'pl_pokezukan.narc',
    input: personal_files,
    env: json2bin_env,
    command: [
        make_pl_pokezukan_py,
        '--knarc', knarc_exe,
        '--source-dir', '@CURRENT_SOURCE_DIR@',
        '--private-dir', '@PRIVATE_DIR@',
        '--output-dir', '@OUTDIR@',
        sinnoh_pokedex
    ]
)

shinzukan_narc = custom_target('shinzukan.narc',
    output: 'shinzukan.narc',
    input: personal_files,
    env: json2bin_env,
    command: [
        make_shinzukan_py,
        '--knarc', knarc_exe,
        '--source-dir', '@CURRENT_SOURCE_DIR@',
        '--private-dir', '@PRIVATE_DIR@',
        '--output-dir', '@OUTDIR@',
        sinnoh_pokedex
    ]
)

species_header_target = meson.current_build_dir()
species_headers_includes = include_directories('.')

gen_species_headers = custom_target('auto-generated species headers',
    output: 'gen_species_headers',
    input: personal_files,
    env: json2bin_env,
    command: [
        make_species_tables_py,
        '--source-dir', '@CURRENT_SOURCE_DIR@',
        '--output-dir', species_header_target
    ]
)

nitrofs_files += pl_personal_narc
nitrofs_files += evo_narc
nitrofs_files += pl_poke_icon_narc
nitrofs_files += pl_pokegra_narc
nitrofs_files += pl_otherpoke_narc
nitrofs_files += wotbl_narc
nitrofs_files += height_narc
nitrofs_files += pl_poke_data_narc
nitrofs_files += pl_pokezukan_narc
nitrofs_files += shinzukan_narc
