relative_build_dir = fs.relative_to(meson.current_build_dir(), meson.project_build_root())

pokemon_anims_target_name = 'pokemon_anims.narc'
pokemon_anims_private_dir = relative_build_dir / pokemon_anims_target_name + '.p'

pokemon_anims_files = files(
    'pokemon_anim_script_unk_000.s',
    'pokemon_anim_script_unk_001.s',
    'pokemon_anim_script_unk_002.s',
    'pokemon_anim_script_unk_003.s',
    'pokemon_anim_script_unk_004.s',
    'pokemon_anim_script_unk_005.s',
    'pokemon_anim_script_unk_006.s',
    'pokemon_anim_script_unk_007.s',
    'pokemon_anim_script_unk_008.s',
    'pokemon_anim_script_unk_009.s',
    'pokemon_anim_script_unk_010.s',
    'pokemon_anim_script_unk_011.s',
    'pokemon_anim_script_unk_012.s',
    'pokemon_anim_script_unk_013.s',
    'pokemon_anim_script_unk_014.s',
    'pokemon_anim_script_unk_015.s',
    'pokemon_anim_script_unk_016.s',
    'pokemon_anim_script_unk_017.s',
    'pokemon_anim_script_unk_018.s',
    'pokemon_anim_script_unk_019.s',
    'pokemon_anim_script_unk_020.s',
    'pokemon_anim_script_unk_021.s',
    'pokemon_anim_script_unk_022.s',
    'pokemon_anim_script_unk_023.s',
    'pokemon_anim_script_unk_024.s',
    'pokemon_anim_script_unk_025.s',
    'pokemon_anim_script_unk_026.s',
    'pokemon_anim_script_unk_027.s',
    'pokemon_anim_script_unk_028.s',
    'pokemon_anim_script_unk_029.s',
    'pokemon_anim_script_unk_030.s',
    'pokemon_anim_script_unk_031.s',
    'pokemon_anim_script_unk_032.s',
    'pokemon_anim_script_unk_033.s',
    'pokemon_anim_script_unk_034.s',
    'pokemon_anim_script_unk_035.s',
    'pokemon_anim_script_unk_036.s',
    'pokemon_anim_script_unk_037.s',
    'pokemon_anim_script_unk_038.s',
    'pokemon_anim_script_unk_039.s',
    'pokemon_anim_script_unk_040.s',
    'pokemon_anim_script_unk_041.s',
    'pokemon_anim_script_unk_042.s',
    'pokemon_anim_script_unk_043.s',
    'pokemon_anim_script_unk_044.s',
    'pokemon_anim_script_unk_045.s',
    'pokemon_anim_script_unk_046.s',
    'pokemon_anim_script_unk_047.s',
    'pokemon_anim_script_unk_048.s',
    'pokemon_anim_script_unk_049.s',
    'pokemon_anim_script_unk_050.s',
    'pokemon_anim_script_unk_051.s',
    'pokemon_anim_script_unk_052.s',
    'pokemon_anim_script_unk_053.s',
    'pokemon_anim_script_unk_054.s',
    'pokemon_anim_script_unk_055.s',
    'pokemon_anim_script_unk_056.s',
    'pokemon_anim_script_unk_057.s',
    'pokemon_anim_script_unk_058.s',
    'pokemon_anim_script_unk_059.s',
    'pokemon_anim_script_unk_060.s',
    'pokemon_anim_script_unk_061.s',
    'pokemon_anim_script_unk_062.s',
    'pokemon_anim_script_unk_063.s',
    'pokemon_anim_script_unk_064.s',
    'pokemon_anim_script_unk_065.s',
    'pokemon_anim_script_unk_066.s',
    'pokemon_anim_script_unk_067.s',
    'pokemon_anim_script_unk_068.s',
    'pokemon_anim_script_unk_069.s',
    'pokemon_anim_script_unk_070.s',
    'pokemon_anim_script_unk_071.s',
    'pokemon_anim_script_unk_072.s',
    'pokemon_anim_script_unk_073.s',
    'pokemon_anim_script_unk_074.s',
    'pokemon_anim_script_unk_075.s',
    'pokemon_anim_script_unk_076.s',
    'pokemon_anim_script_unk_077.s',
    'pokemon_anim_script_unk_078.s',
    'pokemon_anim_script_unk_079.s',
    'pokemon_anim_script_unk_080.s',
    'pokemon_anim_script_unk_081.s',
    'pokemon_anim_script_unk_082.s',
    'pokemon_anim_script_unk_083.s',
    'pokemon_anim_script_unk_084.s',
    'pokemon_anim_script_unk_085.s',
    'pokemon_anim_script_unk_086.s',
    'pokemon_anim_script_unk_087.s',
    'pokemon_anim_script_unk_088.s',
    'pokemon_anim_script_unk_089.s',
    'pokemon_anim_script_unk_090.s',
    'pokemon_anim_script_unk_091.s',
    'pokemon_anim_script_unk_092.s',
    'pokemon_anim_script_unk_093.s',
    'pokemon_anim_script_unk_094.s',
    'pokemon_anim_script_unk_095.s',
    'pokemon_anim_script_unk_096.s',
    'pokemon_anim_script_unk_097.s',
    'pokemon_anim_script_unk_098.s',
    'pokemon_anim_script_unk_099.s',
    'pokemon_anim_script_unk_100.s',
    'pokemon_anim_script_unk_101.s',
    'pokemon_anim_script_unk_102.s',
    'pokemon_anim_script_unk_103.s',
    'pokemon_anim_script_unk_104.s',
    'pokemon_anim_script_unk_105.s',
    'pokemon_anim_script_unk_106.s',
    'pokemon_anim_script_unk_107.s',
    'pokemon_anim_script_unk_108.s',
    'pokemon_anim_script_unk_109.s',
    'pokemon_anim_script_unk_110.s',
    'pokemon_anim_script_unk_111.s',
    'pokemon_anim_script_unk_112.s',
    'pokemon_anim_script_unk_113.s',
    'pokemon_anim_script_unk_114.s',
    'pokemon_anim_script_unk_115.s',
    'pokemon_anim_script_unk_116.s',
    'pokemon_anim_script_unk_117.s',
    'pokemon_anim_script_unk_118.s',
    'pokemon_anim_script_unk_119.s',
    'pokemon_anim_script_unk_120.s',
    'pokemon_anim_script_unk_121.s',
    'pokemon_anim_script_unk_122.s',
    'pokemon_anim_script_unk_123.s',
    'pokemon_anim_script_unk_124.s',
    'pokemon_anim_script_unk_125.s',
    'pokemon_anim_script_unk_126.s',
    'pokemon_anim_script_unk_127.s',
    'pokemon_anim_script_unk_128.s',
    'pokemon_anim_script_unk_129.s',
    'pokemon_anim_script_unk_130.s',
    'pokemon_anim_script_unk_131.s',
    'pokemon_anim_script_unk_132.s',
    'pokemon_anim_script_unk_133.s',
    'pokemon_anim_script_unk_134.s',
    'pokemon_anim_script_unk_135.s',
    'pokemon_anim_script_unk_136.s',
    'pokemon_anim_script_unk_137.s',
    'pokemon_anim_script_unk_138.s',
    'pokemon_anim_script_unk_139.s',
    'pokemon_anim_script_unk_140.s',
    'pokemon_anim_script_unk_141.s',
    'pokemon_anim_script_unk_142.s',
)

pokemon_anims_narc = custom_target(pokemon_anims_target_name,
    output: [
        'pokemon_anims.narc',
        'pokemon_anims.naix',
    ],
    input: script_bin_gen.process(
        pokemon_anims_files,
        extra_args: ['--depfile', '--out-dir', pokemon_anims_private_dir]
    ),
    command: [
        nitroarc_exe,
        '--create',
        '--index',
        '--files-from', files('pokemon_anims.order'),
        '--file', '@OUTPUT0@',
        '@PRIVATE_DIR@',
    ],
)

nitrofs_files += pokemon_anims_narc
naix_headers += pokemon_anims_narc[1]
